# jp2tw-captioner

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
jp2tw-subs/: CHANGELOG.md  Cargo.toml
jp2tw-subs/src/: main.rs
scripts/: prepare_fonts.sh
src/: main.rs
