[package]
name = "jp2tw-subs"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "process", "fs", "io-util"] }
reqwest = { version = "0.11", features = ["json", "multipart", "stream", "gzip", "brotli", "deflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting"] }
indicatif = "0.17"
tempfile = "3.10"
dotenvy = "0.15"

[build-dependencies]
